cargo-features = ['edition2021']

[package]
name = "mock_proxy"
license = "MIT"
description = "A simple way to mock out API's if you can set a proxy"
repository = "https://github.com/Mause/mock_proxy"
authors = ["Elliana May"]
version = "0.1.3-beta.7"
edition = "2018"

[package.metadata.release]
disable-push = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
httparse = "1.4.1"
json = "0.12.4"
log = "0.4.14"
native-tls = "0.2.7"
openssl = "0.10.35"

[dev-dependencies]
reqwest = "0.11.4"
simple_logger = "1.11.0"
tokio = { version = "1.8.1", features = ["macros", "rt"] }
