[package]
name = "mock_proxy"
license = "MIT"
description = "A simple way to mock out API's if you can set a proxy"
repository = "https://github.com/Mause/mock_proxy"
authors = ["Elliana May"]
version = "0.1.4-alpha.1"
edition = "2021"

[package.metadata.release]
disable-push = true
pre-release-commit-message = "ci: Release {{version}}"
post-release-commit-message = "ci: Released {{version}}, starting {{next_version}}"
tag-prefix = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
http = "0.2.4"
httparse = "1.4.1"
json = "0.12.4"
log = "0.4.14"
native-tls = "0.2.7"
openssl = "0.10.35"
p12 = "0.2.0"
rand = "0.8.4"
rcgen = { version = "0.8.11", features = ["pem", "x509-parser"] }
ring = { version = "0.16.20", features = ["std"] }
rustls = "0.20.0"
url = "2.2.2"

[dev-dependencies]
reqwest = {version = "0.11.4", features = ["rustls-tls"]}
simple_logger = "2.1.0"
tokio = { version = "1.8.1", features = ["macros", "rt"] }
